syntax = "proto3";
package like.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "like/v1/like.proto";

option java_multiple_files = true;
option java_package = "sean.hwang.mockstagram.reaction.api.like.v1";

service LikeService {
  rpc CreateLike (CreateLikeRequest) returns (Like) {
    option (google.api.http) = {
      post: "/v1/like",
      body: "*"
    };
  }

  rpc DeleteLike (DeleteLikeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/unlike",
      body: "*"
    };
  }

  rpc BatchGetLikeStats (BatchGetLikeStatsRequest) returns (BatchGetLikeStatsResponse) {
    option (google.api.http) = {
      post: "/v1/likes:batchGetStats",
      body: "*"
    };
  }
}

message BatchGetLikeStatsRequest {
  google.protobuf.StringValue requester_id = 1;
  repeated LikeTarget like_targets = 2;
}

message BatchGetLikeStatsResponse {
  repeated LikeStat like_stats = 1;
}

message LikeTarget {
  google.protobuf.StringValue id = 1;
  Like.TargetType type = 2;
}

message LikeStat {
  LikeTarget target = 1;
  google.protobuf.UInt64Value like_count = 2;
  google.protobuf.BoolValue is_liked = 3;
}

message CreateLikeRequest {
  google.protobuf.StringValue requester_id = 1;
  google.protobuf.StringValue target_id = 2;
  Like.TargetType target_type = 3;
}

message DeleteLikeRequest {
  google.protobuf.StringValue requester_id = 1;
  google.protobuf.StringValue target_id = 2;
  Like.TargetType target_type = 3;
}
